# hodgepodge

./: .gitignore  CMakeLists.txt
false/: Logging.cpp
hdgd/base/: CMakeLists.txt  StringPiece.h  atomic.h  bit_operation.h  color.cpp  color.h  comparable.h  copyable.h  debug.h  exception.h  logging.cpp  logging.h  noncopyable.h  perrno.h  prompt.cpp  prompt.h  string_piece.h  temp.txt  timestamp.cpp  timestamp.h
hdgd/base/tests/: CMakeLists.txt  atomic_unittest.cpp  color_unittest.cpp  prompt_test.cpp  timestamp_unittest.cpp  try_work.cpp
hdgd/false/: CMakeLists.txt  Logging.h  tests.cpp
hdgd/logging/: CMakeLists.txt  color.cpp  color.h  ename.c.inc  logging.cpp  logging.h  perrno.h  prompt.cpp  prompt.h  tests.cpp  timestamp.cpp  timestamp.h  what.hh
hdgd/logging/rigidstructure/: comparable.h  copyable.h  debug.h  noncopyable.h
hdgd/steal/: CMakeLists.txt  temp.cpp  temp.h
hdgd/thread/: CMakeLists.txt  condition.h  mutexlock.h  singleton.h  tags  tests.cpp
logging/: noncopy.h  prompt.cpp  tags
steal/: tests.cpp
